--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -15,8 +15,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install pytest coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+    - name: Test with pytest and run coverage
       run: |
-        pytest
+        coverage run -m pytest
+    - name: Generate coverage report
+      run: |
+        coverage report
